--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@react-google-maps/api": "^2.20.5",
+    "@vis.gl/react-google-maps": "^1.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
